--- a/.github/workflows/icd-app-ci.yml
+++ b/.github/workflows/icd-app-ci.yml
@@ -22,6 +22,7 @@ jobs:
       with:
         repository: espressif/esp-matter
         path: esp-matter
+        submodules: 'recursive'
 
     - name: Set up Python
       uses: actions/setup-python@v4
