--- a/.github/workflows/icd-app-ci.yml
+++ b/.github/workflows/icd-app-ci.yml
@@ -22,6 +22,7 @@ jobs:
       with:
         repository: espressif/esp-matter
         path: esp-matter
+        ref: release/v1.4
         submodules: false # 서브모듈 자동 클론 비활성화
         depth: 1         # 가장 최신 커밋만 가져오기
 
